--- a/css/styles.css
+++ b/css/styles.css
@@ -83,3 +83,13 @@ textarea {
 iframe {
   border: 0;
 }
+
+.content-whatsapp {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  z-index: 2;
+}
+.img-whatsapp {
+  width: 50px;
+}
